# simple-site-monitor-example

./: .gitignore  LICENSE  README.md  config.json  harjoitus.py  pyproject.toml  read.py  requirements.txt  run_monitor.py
src/: config.py  logs_db.py  monitor_app.py
src/templates/: index.html
