[tool.poetry]
name = "simple site monitor"
version = "0.1.0"
description = ""
authors = ["Aleksi Mäkinen <aleksimatias.makinen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
aiosqlite = "^0.17.0"
quart = "^0.18.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
